--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
 <h1>Meaty Foods</h1>
 <img src="https://i8.amplience.net/i/traeger/3-2-1-baby-back-ribs?w=500&sm=aspect&aspect=1:1&scaleFit=poi&$poi2$">
-  
+  <h2>Baby back ribs!</h2> 
 </body>
 </html>
