--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
-<hed>
+  
+  
+<head>
+  <style>
+    {body
+      text-align: center;
+      background-image: linear-gradient(rgb(209, 36, 36), rgb(207, 102, 27), rgb(227, 182, 36));
+      min-height: 100%;
+      min-width: 100%;
+    }
+    
+  </style>
+  
 </head>
+  
+  
 <body>
 <h1>Meaty Foods</h1>
 <img src="https://i8.amplience.net/i/traeger/3-2-1-baby-back-ribs?w=500&sm=aspect&aspect=1:1&scaleFit=poi&$poi2$">
