--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
   <style>
-    {body
+    body{
       text-align: center;
       background-image: linear-gradient(rgb(209, 36, 36), rgb(207, 102, 27), rgb(227, 182, 36));
       min-height: 100%;
