--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
  <iframe width="560" height="315" src="https://www.youtube.com/embed/HEZWrKLAqKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
   <h2> Look ot this red meat add, dosent it just mack your mouth water.
+    
+    <iframe src="<iframe src="https://giphy.com/embed/QNXwixbJZrJUA" width="480" height="293" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/chicken-strip-QNXwixbJZrJUA">via GIPHY</a></p>"
+
+    <h2> dont you Just love chicken strips<h2/>
+            
 </body>
 </html>
