--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <h2> Look ot this red meat add, dosent it just mack your mouth water.
     
-    <iframe src="<iframe src="https://giphy.com/embed/QNXwixbJZrJUA" width="480" height="293" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/chicken-strip-QNXwixbJZrJUA">via GIPHY</a></p>"
+    <iframe src="https://giphy.com/embed/QNXwixbJZrJUA" width="480" height="293" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/chicken-strip-QNXwixbJZrJUA">via GIPHY</a></p>"
 
     <h2> dont you Just love chicken strips<h2/>
             
